--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -o ./app/tailwind.css",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\" \"npm:json-server\"",
     "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
-    "postinstall": "remix setup node"
+    "postinstall": "remix setup node",
+    "json-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "@remix-run/react": "^1.2.3",
@@ -28,6 +29,7 @@
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.9.0",
+    "json-server": "^0.17.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5"
   },
